--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
     "angular": "~1.4.3",
     "angular1.2.28": "http://cdn.bootcss.com/angular.js/1.2.28/angular.js",
     "angular1.3.17": "http://cdn.bootcss.com/angular.js/1.3.17/angular.js",
-    "requirejs": "~2.1.19"
+    "requirejs": "~2.1.19",
+    "jquery": "~2.1.4"
   }
 }
